# transmutedb

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
cli/: main.py
cli/templates/: sql.jinja  task.jinja  test.jinja
docs/: TYPE2_DIMENSIONS.md
examples/: type2_dimension_example.py
pipelines/aviation/: pipeline.yaml
pipelines/aviation/models/silver/: dim_aircraft.py
src/flows/: scaffold_flow.py
src/tasks/: scaffold_transform.py
src/transmutedb/: cli.py
src/transmutedb/cli/: generate.py  main.py
src/transmutedb/config/: loader.py  models.py
src/transmutedb/ctl/: schema.py
src/transmutedb/engine/: duckdb.py
src/transmutedb/flow/: dq.py  entity_builder.py  fact_builder.py  runner.py
src/transmutedb/scaffold/: __init__.py  generate.py
src/transmutedb/templates/polars/: bronze_to_silver.py.j2
testproject/: transmute.config.yaml
tests/: __init__.py  test_auto_fact.py  test_entity_metadata.py  test_init.py  test_type2_dimension.py
transmute/: init.py  main.py  scaffold.py
transmute/flows/: ringo_flow.py
transmute/templates/: README.jinja  config.jinja  flow.jinja  task.jinja  test.jinja
transmute/templates/init/: Dockerfile.jinja  README.jinja  config.jinja  env.jinja  hello_flow.jinja  hello_task.jinja  logger.jinja
