[project]
name = "transmutedb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite==0.21.0",
    "alembic==1.16.1",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "apprise==1.9.3",
    "asgi-lifespan==2.1.0",
    "async-timeout==5.0.1",
    "asyncpg==0.30.0",
    "attrs==25.3.0",
    "black==25.1.0",
    "cachetools==6.0.0",
    "certifi==2025.4.26",
    "cffi==1.17.1",
    "cfgv==3.4.0",
    "charset-normalizer==3.4.2",
    "click==8.1.8",
    "cloudpickle==3.1.1",
    "colorama==0.4.6",
    "coolname==2.2.0",
    "cryptography==45.0.3",
    "dateparser==1.2.1",
    "deprecated==1.2.18",
    "distlib==0.3.9",
    "docker==7.1.0",
    "exceptiongroup==1.3.0",
    "fastapi==0.115.12",
    "filelock==3.18.0",
    "fsspec==2025.5.1",
    "graphviz==0.20.3",
    "greenlet==3.2.2",
    "griffe==1.7.3",
    "h11==0.16.0",
    "h2==4.2.0",
    "hpack==4.1.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "humanize==4.12.3",
    "hyperframe==6.1.0",
    "identify==2.6.12",
    "idna==3.10",
    "importlib-metadata==8.6.1",
    "iniconfig==2.1.0",
    "isort==6.0.1",
    "jinja2==3.1.6",
    "jinja2-humanize-extension==0.4.0",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "jsonschema==4.24.0",
    "jsonschema-specifications==2025.4.1",
    "mako==1.3.10",
    "markdown==3.8",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "mdurl==0.1.2",
    "mypy==1.16.0",
    "mypy-extensions==1.1.0",
    "nodeenv==1.9.1",
    "numpy==2.2.6",
    "oauthlib==3.2.2",
    "opentelemetry-api==1.33.1",
    "orjson==3.10.18",
    "packaging==25.0",
    "pandas==2.2.3",
    "pandera==0.24.0",
    "pathspec==0.12.1",
    "pendulum==3.1.0",
    "platformdirs==4.3.8",
    "pluggy==1.6.0",
    "polars==1.30.0",
    "pre-commit==4.2.0",
    "prefect==3.4.4",
    "prometheus-client==0.22.0",
    "psycopg2-binary==2.9.10",
    "pycparser==2.22",
    "pydantic==2.11.5",
    "pydantic-core==2.33.2",
    "pydantic-extra-types==2.10.4",
    "pydantic-settings==2.9.1",
    "pygments==2.19.1",
    "pytest==8.3.5",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.0",
    "python-slugify==8.0.4",
    "python-socks==2.7.1",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "readchar==4.2.1",
    "referencing==0.36.2",
    "regex==2024.11.6",
    "requests==2.32.3",
    "requests-oauthlib==2.0.0",
    "rfc3339-validator==0.1.4",
    "rich==14.0.0",
    "rpds-py==0.25.1",
    "ruamel-yaml==0.18.12",
    "ruamel-yaml-clib==0.2.12",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.41",
    "starlette==0.46.2",
    "structlog==25.3.0",
    "text-unidecode==1.3",
    "toml==0.10.2",
    "tomli==2.2.1",
    "typeguard==4.4.2",
    "typer==0.16.0",
    "typing-extensions==4.13.2",
    "typing-inspect==0.9.0",
    "typing-inspection==0.4.1",
    "tzdata==2025.2",
    "tzlocal==5.3.1",
    "ujson==5.10.0",
    "urllib3==2.4.0",
    "uv==0.7.9",
    "uvicorn==0.34.3",
    "virtualenv==20.31.2",
    "websockets==15.0.1",
    "wrapt==1.17.2",
    "zipp==3.22.0",
]

[project.scripts]
transmutedb = "transmute.main:app"